--- a/css/index.css
+++ b/css/index.css
@@ -1,119 +1,254 @@
-*{
-    font-family: 'Roboto';
+html {
+    font-size: 100%;
+    box-sizing: border-box;
 }
 
-body{
-    /* border: 1px solid aqua; */
+*,*::before,*::after {
+  box-sizing: inherit;
+  font-family: 'Roboto';
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Public Sans", sans-serif;
+    font-size: 0.875rem;
+    font-weight: 300;
+    color: #9698a6;
+    line-height: 1.3;
+    overflow-x: hidden;
+   
+}
+
+@media screen and (min-width: 64em){
+    body{
+        font-size: 1.15rem;
+        background-color: hsl(0%, 0%, 98%);
+    }
+    
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-jc-sb{
+    justify-content: space-between;
+}
+
+.flex-jc-c {
+    justify-content: center;
+}
+
+.flex-ai-c {
+    align-items: center;
+
+}
+
+a,a:visited,a:hover {
+    text-decoration: none;
+    
+}
+
+
+h1, h2, h3 {
+    margin-top: 0px;
+    
+}
+
+.container {
+    max-width: 77rem;
+    margin: 0 auto;
+    padding-top: 2.25rem;
+    padding-right: 1.5rem;
+    padding-bottom: 2.25rem;
+    padding-left: 1.5rem;
+    
 }
 
 nav{
-    /* border: 1px solid red; */
-    display: flex;
-    width: 100%;
-}
-nav img{
-    /* border: 1px solid green; */
-    width: 100px;
-    margin-left: 100px;
-    
-}
-
-.nav-items{
-    /* border: 1px solid black; */
-    display: flex;
-    margin-left: 350px;
-}
-
-.nav-item{
-    font-size: 15px;
-    margin-left: 25px;
-}
-
-.signin-btn{
-    border: none;
-    margin-left: 250px;
-    height: 25px;
-    margin-top: 20px;
-    border-radius: 50px;
-    padding: 0px 15px;
-    background: linear-gradient(to right,#9979f2,#f288db);
-    color: white;
-}
-
-
-.intro-section{
-    display: flex;
-    min-height: 100%;
-}
-
-.left-section{
-    display: flex;
-    flex-direction: column;
-}
-
-.left-section h1{
-    font-size: 65px;
-    margin-left: 100px;
-    margin-top: 100px;
-    color: #9979f2;
-}
-
-.left-section h4{
-    font-size: 18px;
-    margin-left: 100px;
-    margin-top: 10px;
-    color: grey;
-    width: 320px;
-    line-height: 25px;
-    
-}
-
-
-.learn-more-btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    height: 35px;
-    width: 240px;
-    border-radius: 50px;
-    padding: 30px 20px;
-    margin-left: 100px;
-    margin-top: 50px;
-    font-size: 20px;
-    background: linear-gradient(to right,#9979f2,#f288db);
-    color: white;
-}
-
-.background{
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 95%;
+    padding: 24px;
     z-index: 1;
-        
 }
 
-
-.intro-img{
-    position: absolute;
-    z-index: 2;
-    height: 80%;
-    top: 12%;
-    right: 90px;
+.header__logo img {
+    width: 5.5rem;
+    height: 2.3rem;
 
 }
 
-.vector-img{
-    position: absolute;
-    top: 70%;
-    left: 48%;
+.header__links a {
+    font-size: 0.92rem;
+    transition: colour 300ms ease-in-out;
+    color: rgba(0, 70, 128, 0.966);
+    
+
+}
+.header__links a:hover {
+    color: black;
+    font-style: bold;
+    transition: colour 300ms ease-in-out;
+    
+}
+
+.header__links a:not(:last-child) {
+    margin-right: 32px ;
 
 }
 
-
-.vector-dot{
-    position: absolute;
-    top: 70%;
-    left: 52%;
+/* Mobile Menu */
+.header__menu span{ 
+    display: block;
+    width: 26px;
+    height: 2px;
+    background-color: black;
 }
+
+.header__menu span:not(:last-child) {
+    margin-bottom: 3px;
+}
+
+.button {
+  position: relative;
+  display: inline-block;
+  padding: 0.875rem 2.1875rem;
+  background: linear-gradient(to right,#9979f2,#f288db);
+  border-radius: 30px;
+  cursor: pointer;
+  color: white;
+  font-weight: 600;
+  font-size: 0.875rem;
+  transition: opacity 300ms ease-in-out;
+  overflow: hidden;
+
+}
+
+.header__cta {
+    font-size: 0.875rem;
+    color: white;
+    font-style: bold;
+    transition: colour 300ms ease-in-out;
+
+}
+
+.button2 {
+    position: relative;
+    display: inline-block;
+    padding: 0.875rem 2.1875rem;
+    background: linear-gradient(to right,#9979f2,#f288db);
+    border-radius: 30px;
+    cursor: pointer;
+    color: white;
+    font-weight: 600;
+    font-size: 1.5rem;
+    transition: opacity 300ms ease-in-out;
+    overflow: hidden;
+    margin-top: 30px;
+  
+  }
+  
+  .header__cta2 {
+      font-size: 0.875rem;
+      color: white;
+      font-style: bold;
+      transition: colour 300ms ease-in-out;
+  
+  }
+
+
+@media screen and (max-width: 64em) {
+    .hide-for-mobile {
+        display: none;
+    
+    }   
+}
+
+
+@media screen and (min-width: 64em) {
+    .hide-for-desktop {
+        display: none;
+    }      
+}
+
+@media screen and (min-width: 64em) {
+    .hero .container {
+        display: flex;
+        align-items: center;
+        min-height: 40rem; 
+    }  
+}
+
+.hero__cta {
+    background-color: rgba(0, 70, 128, 0.966);
+    color: white;
+    border: none;
+}
+
+.hero__text3 {
+    text-align: center;   
+}
+@media screen and (min-width: 64em) {
+    .hero__text3 {
+        flex: 2;
+        order: 1;
+        text-align: left;
+        margin-left: 20px;
+    } 
+}
+.hero__text3 h1 {
+    font-weight: 300;
+    color: black;
+    line-height: 1.15;
+    font-size: 2.31rem;
+    margin-bottom: 1.5rem;
+}
+@media screen and (min-width: 64em){
+    .hero__text3 h1 {
+        font-size: 5rem;   
+        color: rgba(0, 70, 128, 0.966);
+    }    
+}
+.hero__text3 p {
+    line-height: 1.6;
+    margin-bottom: 2.25rem; 
+    margin-top: 80px;  
+    color: black;
+}
+.hero__image3 {
+    position: relative;
+    background-image: url(../images/intro-img.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    min-height: 24.5rem;   
+   
+}
+@media screen and (min-width: 40em) {
+    .hero__image3 {
+        min-height: 35rem;
+        background-image: url(../images/intro-img.svg);
+        background-position: center 60%;    
+    }  
+}
+@media screen and (min-width: 64em) {
+    .hero__image3 {
+        flex: 3;
+        order:2;
+        height: 34rem;
+        background-image: url(../images/intro-img.svg);
+        background-size: 550px; 
+    }   
+}
+
+
+
+    .background{
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 95%;
+        z-index: -1;
+            
+    }
+
+
